Adding additional variable defaults and changing format

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,8 @@
-export POSTGRESQL_ROOT_PASSWORD="password"
+POSTGRESQL_PORT: 5432
+POSTGRESQL_ROOT_PASSWORD: "password"
+POSTGRESQL_PUBLIC_INTERFACE: "YES"
+POSTGRESQL_DEFAULT_DB: "database"
+POSTGRESQL_DEFAULT_USER: "user"
+POSTGRESQL_DEFAULT_USER_PASSWORD: "password"
 
 
