--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -229,3 +229,10 @@
     name: postgresql
     state: restarted
   become: yes
+
+# Step 5: Cleanup temp directories
+- name: Remove ansible-remote directory
+  file:
+    path: /tmp/ansible-remote
+    state: absent
+  become: yes
